--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -36,7 +36,7 @@ ln -s ../bin/systemctl $INSTALL/sbin/reboot
 ln -s ../lib/systemd/systemd $INSTALL/sbin/init
 
 # add more gettys
-for TTY in 2 3 4 5 6; do
+for TTY in 2 3 5 6; do
   ln -s /lib/systemd/system/getty/getty@service $INSTALL/etc/systemd/system/getty.target.wants/getty@tty$TTY.service
 done
 
